<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/str_pic_content"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btnRebate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_startup_rebate" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_startup_order" />

    <Button
        android:id="@+id/btnManage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_startup_manage" />

</LinearLayout>