<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/TitleStyle" >

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_return" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_btn_delete" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_btn_confirm" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/hint_item_name" />

        <EditText
            android:id="@+id/textItemName"
            style="@style/EditTextStyle" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/hint_item_note" />

        <EditText
            android:id="@+id/textItemNote"
            style="@style/EditTextStyle" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/hint_item_price" />

        <EditText
            android:id="@+id/textItemPrice"
            style="@style/EditTextStyle"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

</LinearLayout>