<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout style="@style/TitleStyle" >

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/title_btn_return" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/str_total_amount" />

        <EditText
            android:id="@+id/textTotalAmount"
            style="@style/EditTextStyle"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            style="@style/HintUnitStyle"
            android:text="@string/str_unit_yuan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/str_rate_rebate" />

        <EditText
            android:id="@+id/textRebateRate"
            style="@style/EditTextStyle"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HintInputStyle"
            android:text="@string/str_rate_amount" />

        <EditText
            android:id="@+id/textAmountRebate"
            style="@style/EditTextStyle"
            android:enabled="false">
        </EditText>

        <TextView
            style="@style/HintUnitStyle"
            android:layout_height="wrap_content"
            android:text="@string/str_unit_yuan" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:text="@string/btn_rebate_calculate" />

        <Button
            android:id="@+id/btnExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="50dp"
            android:clickable="false"
            android:text="@string/btn_rebate_exchange" />

    </RelativeLayout>

</LinearLayout>