<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_iten_remainder" />

        <TextView
            android:id="@+id/text_item_remainder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_iten_remainder_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btn_item_num_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_item_sub" />

        <EditText
            android:id="@+id/input_item_num"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_item_num_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_item_add" />
    </LinearLayout>

</RelativeLayout>