<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textItemIndex"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp" >

        <ImageView
            android:id="@+id/imageSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/str_image_contents"
            android:src="@drawable/nopicture" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/textItemName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/content_item_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textItemNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/content_item_note"
            android:textColor="#707070"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_item_price_unit"
                android:textColor="#ff0000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_item_price"
                android:textColor="#ff0000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>